package com;

public class Bicicleta extends MedioNoPublico{
}
