package com;

public abstract class MedioNoPublico implements MedioDeTransporte {
  Direccion direccionInicio;
  Direccion direccionFin;
}
