package com;

public enum TipoOrganizacion {
  GUBERNAMENTAL, ONG, EMPRESA, INSTITUCION
}
