package com;

public class TipoServicioContratado {
  String nombre;

  public TipoServicioContratado(String nombre){
    this.nombre = nombre;
  }

}
