package com;

public enum TipoTransportePublico {
  TREN, SUBTE, COLECTIVO
}
