package domain.miembros;

public enum TipoDeDocumento {
  DNI, // Documento nacional de identidad
  LC, // Libreta cívica
  LE, // Libreta de enrolamiento
  CI // Cédula de identidad
}
