package domain.organizaciones;

public enum UnidadHC {
  gCO2, kgCO2, tnCO2
}
